...
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_medium_2"
        android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="List"/>


            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbLargeGrid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Large Grid"/>


            <androidx.appcompat.widget.AppCompatRadioButton
...
